--- a/index.html
+++ b/index.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./assets/global.css">
+  <link rel="stylesheet" href="./assets/reset.css">
   <title>Qypu project</title>
 </head>
 <body>
   
+
+
+<script src="./assets/main.js" type="module"></script>
 </body>
 </html>
