feat: creating style's first steps

--- a/index.html
+++ b/index.html
@@ -6,11 +6,31 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./assets/global.css">
   <link rel="stylesheet" href="./assets/reset.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
   <title>Qypu project</title>
 </head>
 <body>
   
+<aside class="landingPageModal">
 
+  <header>
+    <span> progress </span>
+    <h1> Defina o nome do seu 
+      produto </h1>
+    <h3> Escolha um nome para você e seu cliente 
+      poderem indetificá-lo </h3>
+      <hr/>
+  </header>
+  
+  <footer>
+    <button>
+      CONTINUAR
+    </button>
+  </footer>
+
+</aside>
 
 <script src="./assets/main.js" type="module"></script>
 </body>
