feat: adding corresponding styles for landingPageModal

--- a/index.html
+++ b/index.html
@@ -16,14 +16,23 @@
 <aside class="landingPageModal">
 
   <header>
-    <span> progress </span>
+    <div class="circleContainer"> 
+      <span></span>
+      <span></span>
+      <span></span>
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
     <h1> Defina o nome do seu 
       produto </h1>
     <h3> Escolha um nome para você e seu cliente 
       poderem indetificá-lo </h3>
       <hr/>
-  </header>
-  
+    </header>
+    <section>
+
+  </section>
   <footer>
     <button>
       CONTINUAR
